src/styles/App.css
html {
  scroll-behavior: smooth;
  scroll-padding-top: var(--scroll-padding, 40px);
}

.montserrat-medium {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
}

.montserrat-light {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 300;
  font-style: normal;
}

.montserrat-sbold {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.montserrat-bold {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-weight: 900;
  font-style: normal;
}

.bg-cust{
  background-color: #092B47;
}

.color-cust{
  color: #092B47;
}

.text-cust-light{
  color:#c7d3dc
}

.fs-0 {
  font-size: 3rem;
}

.fs-6{
  font-size: 1.1rem !important
}

.fs-7 {
  font-size: 0.9rem;
}

.fs-8 {
  font-size: 0.8rem;
}

.text-tight {
  letter-spacing: -0.03em;
}

/* .text-secondary-hover:hover{
    opacity: 0.75;
} */
 .bg-color{
  background: linear-gradient(
    to bottom right,
    rgba(214, 228, 255, 0.5),
    rgba(255, 255, 255, 0.5),
    rgba(167, 243, 240, 0.5)
  );
 }

.clamp-two-lines {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  overflow: hidden;
  -webkit-line-clamp: 2;
}

@media only screen and (max-width: 600px) {
  .text-tight {
    letter-spacing: -0.05em;
  }
}

.custom-shape-divider-bottom-1719732010 {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.custom-shape-divider-bottom-1719732010 svg {
  position: relative;
  display: block;
  width: calc(100% + 1.3px);
  height: 67px;
}

.custom-shape-divider-bottom-1719732010 .shape-fill {
  fill: #FFFFFF;
}

